[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://src/levels/stealth_test_controller.gd" id="1_controller"]
[ext_resource type="PackedScene" path="res://scenes/entities/player.tscn" id="2_player_scene"]
[ext_resource type="Script" path="res://src/systems/stealth/shadow_zone.gd" id="3_shadow_zone_script"]
[ext_resource type="Script" path="res://src/systems/combat_system.gd" id="4_combat_system_script"]
[ext_resource type="Script" path="res://src/systems/projectile_system.gd" id="5_projectile_system_script"]
[ext_resource type="Script" path="res://src/systems/ability_system.gd" id="6_ability_system_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_h"]
size = Vector2(1120, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_v"]
size = Vector2(24, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_box_a"]
size = Vector2(140, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_box_b"]
size = Vector2(120, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_box_c"]
size = Vector2(90, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shadow"]
size = Vector2(280, 190)

[node name="StealthTestRoom" type="Node2D"]

[node name="FloorVisual" type="Polygon2D" parent="."]
color = Color(0.12, 0.14, 0.16, 1)
polygon = PackedVector2Array(-560, -320, 560, -320, 560, 320, -560, 320)

[node name="RoomGeometry" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="RoomGeometry"]
position = Vector2(0, -332)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomGeometry/WallTop"]
shape = SubResource("RectangleShape2D_wall_h")

[node name="WallVisual" type="Polygon2D" parent="RoomGeometry/WallTop"]
color = Color(0.26, 0.28, 0.31, 1)
polygon = PackedVector2Array(-560, -12, 560, -12, 560, 12, -560, 12)

[node name="WallBottom" type="StaticBody2D" parent="RoomGeometry"]
position = Vector2(0, 332)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomGeometry/WallBottom"]
shape = SubResource("RectangleShape2D_wall_h")

[node name="WallVisual" type="Polygon2D" parent="RoomGeometry/WallBottom"]
color = Color(0.26, 0.28, 0.31, 1)
polygon = PackedVector2Array(-560, -12, 560, -12, 560, 12, -560, 12)

[node name="WallLeft" type="StaticBody2D" parent="RoomGeometry"]
position = Vector2(-572, 0)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomGeometry/WallLeft"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="WallVisual" type="Polygon2D" parent="RoomGeometry/WallLeft"]
color = Color(0.26, 0.28, 0.31, 1)
polygon = PackedVector2Array(-12, -320, 12, -320, 12, 320, -12, 320)

[node name="WallRight" type="StaticBody2D" parent="RoomGeometry"]
position = Vector2(572, 0)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomGeometry/WallRight"]
shape = SubResource("RectangleShape2D_wall_v")

[node name="WallVisual" type="Polygon2D" parent="RoomGeometry/WallRight"]
color = Color(0.26, 0.28, 0.31, 1)
polygon = PackedVector2Array(-12, -320, 12, -320, 12, 320, -12, 320)

[node name="Obstacles" type="Node2D" parent="."]

[node name="BoxA" type="StaticBody2D" parent="Obstacles"]
position = Vector2(-120, 20)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/BoxA"]
shape = SubResource("RectangleShape2D_box_a")

[node name="BoxVisual" type="Polygon2D" parent="Obstacles/BoxA"]
color = Color(0.42, 0.35, 0.25, 1)
polygon = PackedVector2Array(-70, -45, 70, -45, 70, 45, -70, 45)

[node name="BoxB" type="StaticBody2D" parent="Obstacles"]
position = Vector2(120, -120)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/BoxB"]
shape = SubResource("RectangleShape2D_box_b")

[node name="BoxVisual" type="Polygon2D" parent="Obstacles/BoxB"]
color = Color(0.42, 0.35, 0.25, 1)
polygon = PackedVector2Array(-60, -40, 60, -40, 60, 40, -60, 40)

[node name="BoxC" type="StaticBody2D" parent="Obstacles"]
position = Vector2(250, 140)
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/BoxC"]
shape = SubResource("RectangleShape2D_box_c")

[node name="BoxVisual" type="Polygon2D" parent="Obstacles/BoxC"]
color = Color(0.42, 0.35, 0.25, 1)
polygon = PackedVector2Array(-45, -60, 45, -60, 45, 60, -45, 60)

[node name="ShadowZone" type="Area2D" parent="."]
position = Vector2(180, 40)
script = ExtResource("3_shadow_zone_script")
shadow_multiplier = 0.35
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowZone"]
shape = SubResource("RectangleShape2D_shadow")

[node name="ShadowVisual" type="Polygon2D" parent="ShadowZone"]
color = Color(0.04, 0.06, 0.08, 0.6)
polygon = PackedVector2Array(-140, -95, 140, -95, 140, 95, -140, 95)

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" instance=ExtResource("2_player_scene")]
collision_mask = 3

[node name="Projectiles" type="Node2D" parent="."]

[node name="CombatSystem" type="Node" parent="."]
script = ExtResource("4_combat_system_script")

[node name="ProjectileSystem" type="Node" parent="."]
script = ExtResource("5_projectile_system_script")

[node name="AbilitySystem" type="Node" parent="."]
script = ExtResource("6_ability_system_script")

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(-320, 90)

[node name="EnemySpawn" type="Node2D" parent="."]
position = Vector2(260, -40)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1, 1)
position_smoothing_enabled = true
position_smoothing_speed = 8.0
enabled = true

[node name="DebugUI" type="CanvasLayer" parent="."]
layer = 8

[node name="DebugLabel" type="Label" parent="DebugUI"]
offset_left = 12.0
offset_top = 8.0
offset_right = 1100.0
offset_bottom = 68.0
autowrap_mode = 2
text = "state=CALM | room_eff=CALM room_trans=CALM latch=0 | intent=PATROL | fire_gate=ON"

[node name="HintLabel" type="Label" parent="DebugUI"]
offset_left = 12.0
offset_top = 74.0
offset_right = 1100.0
offset_bottom = 160.0
autowrap_mode = 2
text = "Controls: 1 CALM | 2 ALERT | 3 COMBAT | TAB Debug | R Reset"

[node name="StealthTestController" type="Node" parent="."]
script = ExtResource("1_controller")
